...
    const [open2, setOpen2] = useState(false);
    const [value2, setValue2] = useState(null);
    const [items2, setItems2] = useState([
                        {label: 'Any Age', value: [0,150]},
                        {label: '18 to 24', value: [18,24]},
                        {label: '25 to 34', value: [25,34]},
                        {label: '35 to 44', value: [35,44]},
                        {label: '45 to 54', value: [45,54]},
                        {label: '55 to 64', value: [55,64]},
                        {label: '65 or over', value: [65.150]},
    ]);

    const [open, setOpen] = useState(false);
    const [value, setValue] = useState(null);
    const [items, setItems] = useState([
                        {label: 'Any Region', value: 'Any Region'},
                        {label: 'West', value: 'West'},
                        {label: 'Southwest', value: 'Southwest'},
                        {label: 'Midwest', value: 'Midwest'},
                        {label: 'Northeast', value: 'Northeast'},
                        {label: 'Southeast', value: 'Southeast'},
    ]);

    const [expanded, setExpanded] = useState(false);
    const [selected, setSelected] = React.useState([]);
    const [interests, setInterests] = useState([
        { label: 'Books & Literature', value: 'Books & Literature' },
        { label: 'Business', value: 'Business' },
        { label: 'Career', value: 'Career' },
        { label: 'Movies & TV', value: 'Movies & TV' },
        { label: 'Education', value: 'Education' },
        { label: 'Health', value: 'Health' },
        { label: 'Home & Garden', value: 'Home & Garden' },
        { label: 'Music & Radio', value: 'Music & Radio' },
        { label: 'Comedy', value: 'Comedy' },
...
        <ScrollView style={styles.container}>
            <Header />
            <Text style={styles.subtext}>Find new buds in your area.</Text>
            <View style={styles.filtersContainer}>
                <View>
                    <DropDownPicker
                        placeholder="Age"
                        open={open2}
                        value={value2}
                        items={items2}
                        setOpen={setOpen2}
                        setValue={setValue2}
                        setItems={setItems2}
...
                        onChangeValue={(value) => filterByAge(value)}
                    />
                </View>

                <View>
                    <DropDownPicker
                        placeholder="Region"
                        open={open}
                        value={value}
                        items={items}
                        setOpen={setOpen}
                        setValue={setValue}
                        setItems={setItems}
...
                        selectedTextStyle={styles.selectedTextStyle}
                        inputSearchStyle={styles.inputSearchStyle}
                        iconStyle={styles.iconStyle}
                        data={interests}
                        labelField="label"
                        valueField="value"
                        placeholder="Select Interests"
                        value={selected}
                        search
                        searchPlaceholder="Search..."
                        onChange={item => {
                            setSelected(item);
                            filterByInterests(item);
...

                <Pressable icon="magnify"
                    mode="contained"
                    style={styles.searchButton}
                    onPress={() => onClickHandler()
                }>
                    <Text style={styles.buttonText}>Search Users</Text>
                </Pressable>


                <View style={styles.profileWrapper}>
                    { currUsers.length > 0 ? (
                        currUsers.map((user) => {
...
