...
    }

  function renderSend(props) {
    return (
      <Send {...props} >
        <View style={styles.sendingContainer}>
          <IconButton icon='send-circle' size={32} color='#6646ee' testID='sendMessageButton' />
        </View>
      </Send>
    );
  }

  function renderLoading() {
...
              showUserAvatar
              alwaysShowSend
              renderSend={renderSend}
              renderLoading={renderLoading}
              bottomOffset={36}
              textInputProps={{
                  testID: 'messageInput',
                }}
            />
            ) : (
               <View style={styles.loadingContainer}>
               <ActivityIndicator size='large' color='#6646ee' />
               </View>
...
