...
                              </TouchableHighlight>
                            </Tooltip>
                  </View>

              </View>
              <View style={styles.actionsBar}>
                  <Appbar.Action style={styles.button} icon="watering-can" testID = "waterplant" onPress={_waterPlant} />
                  <Appbar.Action style={styles.button} icon="shopping" testID = "toshop" onPress={_toShop} />
              </View>
          </Appbar.Header>
          <View style={styles.imageBox}>
              <Pressable
              onPress={_checkOutfit}>
                      <Image style={{width:userGarden.flowerSize, height:userGarden.flowerSize}}
...
